--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/mathjs@8.1.0/lib/browser/math.js"></script>
   <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename = 'main.js') }}"></script>
+  <script src="{{ url_for('static', filename = 'main.js') }}"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/nerdamer.core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Algebra.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Calculus.js"></script>
@@ -82,24 +82,32 @@
             </div>
           </div>
 
-          <div class="row min-vh-80 flex-column flex-md-row mt-2 container-xl">
+          <div class="row min-vh-80 flex-column flex-md-row mt-2 container-fluid">
             <main class="col px-0 flex-grow-1">
               <div id="plot" class="flex-grow-1"></div>
             </main>
 
-            <aside class="col-12 col-md-5 col-xl-2 bg-light p-2">
-              <div>
-                <label>Punto fijo</label>
-                <label id="fixed_points">
-                  <ul>
+            <aside class="col-12 col-md-5 col-xl-3 bg-light p-2">
+              <div class="row p-2">
+                <label class="align-top col-md">Puntos fijos</label>
+                  <ul class="col-sm-8">
                     {% for punto_fijo in puntos_fijos %}
                     <li>{{ punto_fijo}}</li>
                     {% endfor %}
                   </ul>
-                </label>
               </div>
-              <div class="mt-3">Estabilidad</div>
-              <div class="mt-3">datos de Lyapunov etc</div>
+              <div class="row p-2">
+                <label class="align-top col-md">Estabilidad</label>
+                  <ul class="col-sm-8">
+
+                  </ul>
+              </div>
+              <div class="row p-2">
+                <label class="align-top col-md">Datos de Lyapunov</label>
+                  <ul class="col-sm-8">
+
+                  </ul>
+              </div>
             </aside>
           </div>
         </div>
