--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,9 @@
               <div class="row p-2">
                 <label class="align-top col-md">Estabilidad</label>
                   <ul class="col-sm-8">
-
+                    {% for punto in estabilidad_puntos %}
+                    <li>El punto{{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
+                    {% endfor %}
                   </ul>
               </div>
               <div class="row p-2">
