--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/mathjs@8.1.0/lib/browser/math.js"></script>
   <script src="https://cdn.plot.ly/plotly-1.35.2.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <!-- <script src="{{ url_for('static', filename = 'main.js') }}"></script> -->
+  <script src="{{ url_for('static', filename = 'main.js') }}"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/nerdamer.core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Algebra.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/nerdamer@latest/Calculus.js"></script>
