--- a/templates/index.html
+++ b/templates/index.html
@@ -84,31 +84,38 @@
 
           <div class="row min-vh-80 flex-column flex-md-row mt-2 container-fluid">
             <main class="col px-0 flex-grow-1">
-              <div id="plot" class="flex-grow-1"></div>
+              <div class="flex-grow-1 p-3">
+                <label>Visualización de las orbitas de f(x,y)</label>
+                <div id="plot" class="flex-grow-2"></div>
+              </div>
+              <div class="mt-5 flex-grow-1 p-3">
+                <label>Visualización atractores</label>
+                <div id="plot2" class="flex-grow-2"></div>
+              </div>
             </main>
 
             <aside class="col-12 col-md-5 col-xl-3 bg-light p-2">
               <div class="row p-2">
                 <label class="align-top col-md">Puntos fijos</label>
-                  <ul class="col-sm-8">
-                    {% for punto_fijo in puntos_fijos %}
-                    <li>{{ punto_fijo}}</li>
-                    {% endfor %}
-                  </ul>
+                <ul class="col-sm-8">
+                  {% for punto_fijo in puntos_fijos %}
+                  <li>{{ punto_fijo}}</li>
+                  {% endfor %}
+                </ul>
               </div>
               <div class="row p-2">
                 <label class="align-top col-md">Estabilidad</label>
-                  <ul class="col-sm-8">
-                    {% for punto in estabilidad_puntos %}
-                    <li>El punto {{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
-                    {% endfor %}
-                  </ul>
+                <ul class="col-sm-8">
+                  {% for punto in estabilidad_puntos %}
+                  <li>El punto {{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
+                  {% endfor %}
+                </ul>
               </div>
               <div class="row p-2">
                 <label class="align-top col-md">Datos de Lyapunov</label>
-                  <ul class="col-sm-8">
+                <ul class="col-sm-8">
 
-                  </ul>
+                </ul>
               </div>
             </aside>
           </div>
