--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
             <div id="input_data" class="row justify-content-between container p-3">
               <div class="row col-7 p-2">
                 <label for="eq">Introduce la ecuación</label>
-                <input text="text" id="eq" name="eq" value="-x^2+0.4*y, x" placeholder="f1(x,y),f2(x,y)" />
+                 <input text="text" id="eq" name="eq" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" /> 
               </div>
 
               <div class="col-5 justify-content-end mt-4">
@@ -89,7 +89,6 @@
                 <div id="plot" class="flex-grow-2"></div>
               </div>
               <div class="mt-5 flex-grow-1 p-3">
-                <label>Visualización atractores</label>
                 <div id="plot2" class="flex-grow-2"></div>
               </div>
             </main>
