cambios en iteraciones

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,36 +33,20 @@
         <div class="seccion">Valores</div>
         <div class="row p-2">
           <label class="col-md" for="vars">Iteraciones (n)</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="n" name="n" value="100" />
+          <input class="col-sm-4" style="text-align: right" type="text" id="n" name="n" value="{{n}}" />
         </div>
         <div class="row p-2">
           <label class="col-md" for="vars">Iteraciones finales (0 si no hay final)</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="m" name="m" value="0" />
-        </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">X máxima</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="x-max" name="x-max" value="10" />
-        </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">X minima</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="x-min" name="x-min" value="0" />
-        </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">Y máxima</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="y-max" name="y-max" value="10" />
-        </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">Y minima</label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="y-min" name="y-min" value="0" />
+          <input class="col-sm-4" style="text-align: right" type="text" id="m" name="m" value="{{m}}" />
         </div>
         <div class="seccion">Parámetros</div>
         <div class="row p-2">
           <label class="col-md" for="vars">X<sub>0</sub></label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="x0" name="x0" value="0" />
+          <input class="col-sm-4" style="text-align: right" type="text" id="x0" name="x0" value="{{x0}}" />
         </div>
         <div class="row p-2">
           <label class="col-md" for="vars">Y<sub>0</sub></label>
-          <input class="col-sm-4" style="text-align: right" type="text" id="y0" name="y0" value="1" />
+          <input class="col-sm-4" style="text-align: right" type="text" id="y0" name="y0" value="{{y0}}" />
         </div>
 
       </aside>
