--- a/static/style.css
+++ b/static/style.css
@@ -2,9 +2,17 @@
     outline: 1px red dashed;
 }
 
-body{
-
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+  }
 
 aside{
     border-radius: 5px;
