Añadido comentario a los plots

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,11 @@
           <div class="row min-vh-80 flex-column flex-md-row mt-2 container-fluid">
             <main class="col px-0 flex-grow-1">
               <div class="flex-grow-1 p-3">
+                <p>
+                  Para estudiar los atractores de un mapa bidimensional usamos dos gráficos vistos en la Práctica 5.
+                  Estos gráficos nos muestran las cuencas de atracción con opciones de ajustar la cantidad de valores calculados y
+                  de iteraciones finales.
+                </p>
                 <div id="plot" class="flex-grow-2"></div>
               </div>
               <div class="mt-5 flex-grow-1 p-3">
