imagenes + borrado archivo error

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
             <aside class="col-12 col-md-5 col-xl-3 bg-light p-2">
               <div class="row p-2">
                 <label class="align-top col-md">Puntos fijos</label>
-                <ul class="col-sm-8">
+                <ul class="col-md-8">
                   {% for punto_fijo in puntos_fijos %}
                   <li>{{ punto_fijo}}</li>
                   {% endfor %}
