--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
 <body onload="init()">
   <!-- <body> -->
   <header class="align-items-center container-lg mx p-5 text-center">
+    <img src="imagenes\Sello-2004.gif" alt="Universidad de Sevilla">
     <h1>Representación de sistemas discretos bidimensionales</h1>
   </header>
   <div class="container-fluid">
