--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
 <body onload="init()">
   <!-- <body> -->
-  <header class="align-items-center container-lg mx p-5 text-center">
+  <header class="align-items-center container-lg mx p-3 text-center">
     <img src="imagenes\índice.png" alt="Universidad de Sevilla">
     <h1>Representación de sistemas discretos bidimensionales</h1>
   </header>
@@ -82,7 +82,7 @@
               </div>
             </main>
 
-            <aside class="col-12 col-md-5 col-xl-3 bg-light p-2">
+            <aside class="col-12 col-md-5 col-xl-3 bg-light p-2 calculos">
               <div class="row p-2">
                 <label class="align-top col-md">Puntos fijos</label>
                 <ul class="col-md-8">
