--- a/templates/index.html
+++ b/templates/index.html
@@ -24,30 +24,35 @@
 
 <body onload="init()">
   <!-- <body> -->
-  <header class="align-items-center container-lg mx p-2 text-center">
-    <img class = "img-fluid" src="{{url_for('static', filename='logo-ETSII-US-Horizontal-Color.png')}}" alt="Universidad de Sevilla">
-    <h1>Representación de sistemas discretos bidimensionales</h1>
+  <header class="align-items-center container-lg mx p-2 text-center border-bottom py-2">
+    <img class="w-50 img-fluid" src="{{url_for('static', filename='logo-ETSII-US-Horizontal-Color.png')}}"
+      alt="Universidad de Sevilla">
+    <h3>Representación de sistemas discretos bidimensionales</h1>
   </header>
   <div class="container-fluid">
     <form class="row min-vh-100 flex-column flex-md-row" method="POST">
-      <aside class="col-12 col-md-3 col-xl-2 p-0 bg-light px-3 flex-shrink-1 p-2">
-        <div class="seccion">Valores</div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">Iteraciones (n)</label>
-          <input class="col-sm-4" style="text-align: right" type="number" id="n" name="n" value="{{n}}" />
+      <aside class="col-12 col-md-3 col-xl-2 p-0 bg-light px-3 flex-shrink-1 p-2 border">
+        <div class="border-bottom py-2">
+          <div class="seccion">Valores</div>
+          <div class="row p-2">
+            <label class="col-md" for="vars">Iteraciones (n)</label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="n" name="n" value="{{n}}" />
+          </div>
+          <div class="row p-2">
+            <label class="col-md" for="vars">Iteraciones finales (0 si no hay final)</label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="m" name="m" value="{{m}}" />
+          </div>
         </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">Iteraciones finales (0 si no hay final)</label>
-          <input class="col-sm-4" style="text-align: right" type="number" id="m" name="m" value="{{m}}" />
-        </div>
-        <div class="seccion">Parámetros</div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">X<sub>0</sub></label>
-          <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{x0}}" />
-        </div>
-        <div class="row p-2">
-          <label class="col-md" for="vars">Y<sub>0</sub></label>
-          <input class="col-sm-4" style="text-align: right" type="number" id="y0" name="y0" value="{{y0}}" />
+        <div class="border-top py-2">
+          <div class="seccion">Parámetros</div>
+          <div class="row p-2">
+            <label class="col-md" for="vars">X<sub>0</sub></label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{x0}}" />
+          </div>
+          <div class="row p-2">
+            <label class="col-md" for="vars">Y<sub>0</sub></label>
+            <input class="col-sm-4" style="text-align: right" type="number" id="y0" name="y0" value="{{y0}}" />
+          </div>
         </div>
 
       </aside>
@@ -55,24 +60,25 @@
       <main id="content" class="col px-0 flex-grow-1">
         <div class="container-fluid">
           <div class="px-3">
-            <div id="input_data" class="row justify-content-between container p-3">
+            <div id="input_data" class="row justify-content-between container border rounded bg-light mt-2 p-3">
               <div class="row col-7 p-2">
                 <label for="eq">Introduce la ecuación</label>
-                 <input text="text" id="eq" name="eq" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" /> 
+                <input text="text" id="eq" name="eq" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" />
               </div>
 
-              <div class="col-5 d-flex justify-content-end mt-4">
-                <input class="btn btn-primary" id="go_button" type="submit" value="Go!" />
+              <div class="col-5 d-flex justify-content-end mt-4 mb-2">
+                <input class="btn btn-primary" id="go_button" type="button" value="Go!" />
               </div>
             </div>
           </div>
 
-          <div class="row min-vh-80 flex-column flex-md-row mt-2 container-fluid plots">
+          <div class="row min-vh-80 flex-column flex-md-row mt-2 border rounded container-fluid plots">
             <main class="col px-0 flex-grow-1">
-              <div class="flex-grow-1 p-3 border rounded bg-info">
+              <div class="flex-grow-1 p-3">
                 <p>
                   Para estudiar los atractores de un mapa bidimensional usamos dos gráficos vistos en la Práctica 5.
-                  Estos gráficos nos muestran las cuencas de atracción con opciones de ajustar la cantidad de valores calculados y
+                  Estos gráficos nos muestran las cuencas de atracción con opciones de ajustar la cantidad de valores
+                  calculados y
                   de iteraciones finales.
                 </p>
                 <div id="plot" class="flex-grow-2"></div>
@@ -80,44 +86,75 @@
                   <div id="plot2" class="flex-grow-2"></div>
                 </div>
               </div>
-              </div>
-            </main>
+          </div>
+      </main>
 
-            <aside class="col-12 col-md-5 col-xl-3 bg-light p-2">
-              <div class="row p-2">
-                <label class="align-top col-md">Puntos fijos</label>
-                <ul class="col-md-8">
-                  {% for punto_fijo in puntos_fijos %}
-                  <li>{{ punto_fijo}}</li>
-                  {% endfor %}
-                </ul>
-              </div>
-              <div class="row p-2">
-                <label class="align-top col-md">Estabilidad</label>
-                <ul class="col-sm-8">
-                  {% for punto in estabilidad_puntos %}
-                  <li>El punto {{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
-                  {% endfor %}
-                </ul>
-              </div>
-              <div class="row p-2">
-                <label class="align-top col-md">Matriz Jacobiana</label>
-                <ul class="col-sm-8">
-                  {{j}}
-                </ul>
-              </div>
-              <div class="row p-2">
-                <label class="align-top col-md">Exponentes de Lyapunov</label>
-                <ul class="col-sm-8">
-                  <li>L<sub>1</sub>: {{exponentes_lyapunov[0]}}</li>
-                  <li>L<sub>2</sub>: {{exponentes_lyapunov[1]}}</li>
-                </ul>
-              </div>
-            </aside>
+      <aside class="col-12 col-md-5 col-xl-3 p-2 border">
+        <div id="output">
+          <div class="row p-2">
+            <label class="align-top col-md">Puntos fijos</label>
+            <ul class="col-md-8">
+              {% for punto_fijo in puntos_fijos %}
+              <li>{{ punto_fijo}}</li>
+              {% endfor %}
+            </ul>
+          </div>
+          <div class="row p-2">
+            <label class="align-top col-md">Estabilidad</label>
+            <ul class="col-sm-8">
+              {% for punto in estabilidad_puntos %}
+              <li>El punto {{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
+              {% endfor %}
+            </ul>
+          </div>
+          <div class="row p-2">
+            <label class="align-top col-md">Matriz Jacobiana</label>
+            <ul class="col-sm-8">
+              {{j}}
+            </ul>
+          </div>
+          <div class="row p-2">
+            <label class="align-top col-md">Exponentes de Lyapunov</label>
+            <ul class="col-sm-8">
+              <li>L<sub>1</sub>: {{exponentes_lyapunov[0]}}</li>
+              <li>L<sub>2</sub>: {{exponentes_lyapunov[1]}}</li>
+            </ul>
           </div>
         </div>
-      </main>
-    </form>
+      </aside>
+      <script>
+        $("#go_button").click(function () {
+          console.log("Se ha pulsado el boton")
+          var _eq = document.getElementById("eq").value;
+          console.log(_eq)
+          var _expr0 = math.parse(stored_equation[0])
+          var _expr1 = math.parse(stored_equation[1])
+          console.log(_expr0, _expr1)
+          var _iterations = parseFloat(document.getElementById("n").value);
+          console.log(_iterations)
+          var _final_iterations = parseFloat(document.getElementById("m").value);
+          console.log(_final_iterations);
+          var _x0 = parseFloat(document.getElementById("x0").value);
+          var _y0 = parseFloat(document.getElementById("y0").value);
+          console.log(_x0, _y0);
+          $.ajax({
+            url: "/output",
+            type: "get",
+            data: { eq: _eq, n: _iterations, m: _final_iterations, x0: _x0, y0: _y0 },
+            success: function (response) {
+              $("#output").html(response);
+            },
+            error: function (xhr) {
+              console.log("Hubo un error :/")
+              console.log(xhr)
+            }
+          });
+        });
+      </script>
+  </div>
+  </div>
+  </main>
+  </form>
   </div>
 </body>
 
