--- a/templates/output.html
+++ b/templates/output.html
@@ -1,9 +1,9 @@
 <div class="row p-2">
     <label class="align-top col-md">Puntos fijos</label>
-    <ul id="puntos_fijos" class="col-md-8"  >
-        {% for puntos_fijo in puntos_fijos %}
+    <ul id="fixed_points" class="col-md-8"  >
+        {% for fixed_point in fixed_points %}
         <li><ul>
-            {% for var, value in puntos_fijo.items() %}
+            {% for var, value in fixed_point.items() %}
                 <li>{{var}}: {{value}}</li>
                 <span></span>
             {% endfor %}
@@ -14,8 +14,8 @@
 <div class="row p-2">
     <label class="align-top col-md">Estabilidad</label>
     <ul id="estabilidad" class="col-sm-8" >
-        {% for punto in estabilidad_puntos %}
-        <li>El punto {{punto[0]}} tiene estabilidad: {{punto[1]}}</li>
+        {% for point in stability %}
+        <li>El punto {{point}} tiene estabilidad: {{point[1]}}</li>
         {% endfor %}
     </ul>
 </div>
@@ -28,7 +28,7 @@
 <div class="row p-2">
     <label class="align-top col-md">Exponentes de Lyapunov</label>
     <ul id="lyap_exp" class="col-sm-8">
-        <li>L<sub>1</sub>: {{exponentes_lyapunov[0]}}</li>
-        <li>L<sub>2</sub>: {{exponentes_lyapunov[1]}}</li>
+        <li>L<sub>1</sub>: {{exp_l[0]}}</li>
+        <li>L<sub>2</sub>: {{exp_l[1]}}</li>
     </ul>
 </div>
