--- a/templates/output.html
+++ b/templates/output.html
@@ -1,17 +1,19 @@
 <div class="row p-2">
     <label class="align-top col-md">Puntos fijos</label>
-    <ul id="fixed_points" class="col-md-8"  >
+    <ul id="fixed_points" class="col-md-8">
         {% for fixed_point in fixed_points %}
-        <li><ul>
-            <li>x: {{fixed_point[0]}}</li>
-            <li>y: {{fixed_point[1]}}</li>
-        </ul></li>
+        <li>
+            <ul>
+                <li>x: {{fixed_point[0]}}</li>
+                <li>y: {{fixed_point[1]}}</li>
+            </ul>
+        </li>
         {% endfor %}
     </ul>
 </div>
 <div class="row p-2">
     <label class="align-top col-md">Estabilidad</label>
-    <ul id="estabilidad" class="col-sm-8" >
+    <ul id="estabilidad" class="col-sm-8">
         {% for point in stability %}
         <li>El punto {{point[0]}} tiene estabilidad: {{point[1]}}</li>
         {% endfor %}
@@ -19,9 +21,15 @@
 </div>
 <div class="row p-2">
     <label class="align-top col-md">Matriz Jacobiana</label>
-    <ul id="m_j" class="col-sm-8" >
-        {{j}}
-    </ul>
+    <div class="col">
+        {% for row in j %}
+        <div class="row">
+            {% for element in row %}
+            <div class="col">{{element}}</div>
+            {% endfor %}
+        </div>
+        {% endfor %}
+    </div>
 </div>
 <div class="row p-2">
     <label class="align-top col-md">Exponentes de Lyapunov</label>
