con enviroment.yml

--- a/templates/output.html
+++ b/templates/output.html
@@ -20,7 +20,7 @@
     </ul>
 </div>
 <div class="row p-2">
-    <label class="align-top col-md">Matriz Jacobiana</label>
+    <label class="align-top col-md-4">Matriz Jacobiana</label>
     <div class="col">
         {% for row in j %}
         <div class="row">
