--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,12 @@
-
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+input{
+  padding-left: 0;
 }
 
 /* Firefox */
