--- a/templates/index.html
+++ b/templates/index.html
@@ -46,12 +46,15 @@
         <div class="border-top py-2">
           <div class="seccion">Parámetros</div>
           <div class="row p-2">
-            <label class="col-md" for="vars">X<sub>0</sub></label>
+            <label class="col-md" for="x0">X<sub>0</sub></label>
             <input class="col-sm-4" style="text-align: right" type="number" id="x0" name="x0" value="{{x0}}" />
           </div>
           <div class="row p-2">
-            <label class="col-md" for="vars">Y<sub>0</sub></label>
+            <label class="col-md" for="y0">Y<sub>0</sub></label>
             <input class="col-sm-4" style="text-align: right" type="number" id="y0" name="y0" value="{{y0}}" />
+          </div>
+          <div id="params">
+
           </div>
         </div>
 
@@ -68,13 +71,13 @@
                   <input type="radio" id="matrix_input" name="option">
                 </div>
                 <div class="col-sm-2"> <label for="eq_input">Ecuaciones</label>
-                  <input type="radio" id="eq_input" name="option" checked>
+                  <input type="radio"  id="eq_input" name="option" checked>
                 </div>
 
               </div>
               <div id="input_type" class="row col-7 p-2">
                 <label for="eq">Introduce la ecuación</label>
-                <input text="text" id="eq" name="eq" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" />
+                <input text="text" id="eq" class="py-1" name="eq" onkeyup="find_params()" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)" />
               </div>
 
               <div class="col-5 d-flex justify-content-end mt-4 mb-2">
@@ -92,9 +95,9 @@
                   calculados y
                   de iteraciones finales.
                 </p>
-                <div id="plot" class="flex-grow-2"></div>
+                <div id="plot_orb" class="flex-grow-2"></div>
                 <div class="py-2">
-                  <div id="plot2" class="flex-grow-2"></div>
+                  <div id="plot_att" class="flex-grow-2"></div>
                 </div>
               </div>
           </div>
@@ -134,38 +137,8 @@
         </div>
       </aside>
       <script>
-        $("#go_button").click(function () {
-          if($("#eq_input").is(":checked")){
-            var _input = document.getElementById("eq").value;
-            var _type = "eq"
-          } else{
-            var matrix = [[document.getElementById("m_00").value,
-                          document.getElementById("m_01").value],
-                          [document.getElementById("m_10").value,
-                          document.getElementById("m_11").value]]
-            var _input = `[[${matrix[0][0]},${matrix[0][1]}],[${matrix[1][0]},${matrix[1][1]}]]`
-            console.log(_input)
-            var _type = "matrix"
-          }
-          var _iterations = parseFloat(document.getElementById("n").value);
-          var _final_iterations = parseFloat(document.getElementById("m").value);
-          var _x0 = parseFloat(document.getElementById("x0").value);
-          var _y0 = parseFloat(document.getElementById("y0").value);
-          $.ajax({
-            url: "/output",
-            type: "get",
-            data: { input: _input, type: _type, n: _iterations, m: _final_iterations, x0: _x0, y0: _y0 },
-            success: function (response) {
-              $("#output").html(response);
-            },
-            error: function (xhr) {
-              console.log("Hubo un error :/")
-              console.log(xhr)
-            }
-          });
-        });
         $("#eq_input").click(function (){
-          $("#input_type").html('<label for="eq">Introduce la ecuación</label><input text="text" id="eq" name="eq" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)"/>')
+          $("#input_type").html('<label for="eq">Introduce la ecuación</label><input text="text" class="py-1" id="eq" name="eq" onkeyup="find_params()" value="{{f}} , {{g}}" placeholder="f1(x,y),f2(x,y)"/>')
           stored_equation = document.getElementById("eq").value.split(",");
         })
         $("#matrix_input").click(function (){
@@ -179,7 +152,6 @@
               </div>
             {% endfor %}
           </div>`)
-          store_matrix();
         })
       </script>
   </div>
