--- a/templates/output.html
+++ b/templates/output.html
@@ -32,6 +32,14 @@
     </div>
 </div>
 <div class="row p-2">
+    <label class="align-top col-md">Autovalores</label>
+    <ul id="eigen_vals" class="col-sm-8">
+        {% for i in range(eigen_values|length) %}
+        <li>&lambda;<sub>{{i+1}}</sub>: {{eigen_values[i]}}</li>
+        {% endfor %}
+    </ul>
+</div>
+<div class="row p-2">
     <label class="align-top col-md">Exponentes de Lyapunov</label>
     <ul id="lyap_exp" class="col-sm-8">
         <li>L<sub>1</sub>: {{exp_l[0]}}</li>
