Puesto texto de la matriz Jacobiana

--- a/templates/output.html
+++ b/templates/output.html
@@ -41,7 +41,7 @@
       <figure class="col-3">
         <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
         <figcaption>
-          Textito que aparece cuando pones encima del objeto ese feo
+          La matriz jacobiana es una matriz formada por las derivadas parciales de primer orden de una función.
         </figcaption>
       </figure>
     </div>
