--- a/templates/output.html
+++ b/templates/output.html
@@ -4,7 +4,7 @@
       <figure class="col-3">
         <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
         <figcaption>
-          Textito que aparece cuando pones encima del objeto ese feo
+          Sean (D,f) un sistema dinámico discreto y p ∈ D. Se dice que p es un puntofijo de f si f(p) = p.
         </figcaption>
       </figure>
     </div>
