--- a/templates/output.html
+++ b/templates/output.html
@@ -25,7 +25,7 @@
       <figure class="col-3">
         <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
         <figcaption>
-          Textito que aparece cuando pones encima del objeto ese feo
+          Para investigar la estabilidad de un punto fijo x*, debemos calcular la matriz jacobiana de la función, evaluar el punto fijo y analizar el resultado numérico obtenido de los autovalores.
         </figcaption>
       </figure>
     </div>
