--- a/templates/output.html
+++ b/templates/output.html
@@ -55,7 +55,7 @@
       <figure class="col-3">
         <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
         <figcaption>
-          Textito que aparece cuando pones encima del objeto ese feo
+          Sea A una matriz cuadrada de orden M. Diremos que un escalar λ ∈ K (= R o C) es un autovalor de A si existe un vector v ∈ K^m , v != 0 tal que Av = λv, en cuyo caso se dice que v es un autovector de A asociado al autovalor λ.
         </figcaption>
       </figure>
     </div>
@@ -71,7 +71,7 @@
       <figure class="col-3">
         <img src="/static/question-mark-inside-a-circle.svg" class="align-top">
         <figcaption>
-          Textito que aparece cuando pones encima del objeto ese feo
+          El Exponente Lyapunov o Exponente característico Lyapunov de un sistema dinámico es una cantidad que caracteriza el grado de separación de dos trayectorias infinitesimalmente cercanas.
         </figcaption>
       </figure>
     </div>
